@@ -2,9 +2,10 @@ import groovy.io.FileType
 
 apply plugin: 'java-library'
 apply plugin: 'maven-publish'
+apply plugin: 'eclipse'
 
-group = 'com.mojang'
-version = project.hasProperty('buildNumber') ? "${project.majorMinor}.${project.buildNumber}" : "${project.majorMinor}.0-SNAPSHOT"
+group = 'com.thegamecommunity'
+version = "${project.version}"
 
 buildscript {
     repositories {
@@ -23,17 +24,17 @@ repositories {
 }
 
 dependencies {
-    testCompile 'com.google.guava:guava:26.0-jre'
-    testCompile 'junit:junit-dep:4.11'
-    testCompile 'org.hamcrest:hamcrest-library:1.3'
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'com.google.guava:guava-testlib:26.0-jre'
-    testCompile 'org.openjdk.jmh:jmh-core:1.21'
+    testImplementation 'com.google.guava:guava:26.0-jre'
+    testImplementation 'junit:junit-dep:4.11'
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
+    testImplementation 'org.mockito:mockito-core:5.0.0'
+    testImplementation 'com.google.guava:guava-testlib:26.0-jre'
+    testImplementation 'org.openjdk.jmh:jmh-core:1.21'
     annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.21'
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier.set("sources")
     from sourceSets.main.allSource
 }
 
@@ -84,33 +85,18 @@ task report {
     }
 }
 
+tasks.withType(JavaCompile) {
+	options.forkOptions.jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
+}
+
 def publishDir = file("$buildDir/repo")
 
 clean.doLast {
     delete publishDir
 }
 
-if (version.endsWith("SNAPSHOT")) {
-    publishing.repositories {
-        mavenLocal()
-    }
-} else {
-    publishing.repositories {
-        maven {
-           url "$buildDir/repo"
-        }
-    }
-
-    publish.doLast {
-        publishDir.eachFileRecurse {
-            if (!it.isFile()) {
-                return
-            }
-            // Remove junk files
-            if (it.name.contains(".xml") || it.name.contains(".md5")) {
-                it.delete()
-            }
-        }
-    }
+publishing.repositories {
+    mavenLocal()
 }
+
 
